# test-task

./: .gitignore  README.md
VirtStorageLib/: CMakeLists.txt  build.bat  build.sh
VirtStorageLib/include/: ActionOnRemovedNodeException.h  InsertInEmptyVirtualNodeException.h  NodeContainer.h  Storage.h  Types.h  Volume.h
VirtStorageLib/include/intfs/: Node.h  NodeContainer.h  NodeLIfespan.h  NodeLifespan.h  NodeMounter.h  VirtualNode.h  VolumeNode.h
VirtStorageLib/src/: NodeIdImpl.h  NodeProxyBase.h  RootHolder.h  VirtualNodeBase.h  VirtualNodeBaseImpl.h  VirtualNodeImpl.h  VirtualNodeMounter.h  VirtualNodeProxyImpl.h  VolumeNodeBase.h  VolumeNodeBaseImpl.h  VolumeNodeImpl.h  VolumeNodeProxyImpl.h
VirtStorageLib/src/Intfs/: ProxyProvider.h
VirtStorageLib/src/intfs/: NodeEvents.h  NodeId.h  NodeInternal.h  NodeLifespan.h  ProxyProvider.h
VirtStorageLib/src/utils/: NameRegistrar.cpp  NameRegistrar.h  NonCopyable.h  Noncopyable.h  UniqueIdGenerator.cpp  UniqueIdGenerator.h
VirtStorageLib/tests/: CMakeLists.txt  TestData.cpp  TestData.h  TestTools.cpp  TestTools.h  TestToolsTests.cpp  VirtualNodeTests.cpp  VolumeNodeTests.cpp
